# concord

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
crates/concord-client/: Cargo.toml
crates/concord-client/src/: api.rs  auth.rs  lib.rs  main.rs
crates/concord-client/src/state/: auth.rs  chat.rs  connection.rs  mod.rs  servers.rs
crates/concord-client/src/ui/: assets.rs  auth_view.rs  mod.rs  nav.rs  root.rs  theme.rs
crates/concord-client/src/ws/: connection.rs  handle.rs  mod.rs  types.rs
crates/concord-client/tests/: connection.rs
crates/concord-server/: Cargo.toml
crates/concord-server/src/: config.rs  db.rs  error.rs  extractors.rs  hub.rs  jwt.rs  lib.rs  main.rs  presence.rs  state.rs  typing.rs
crates/concord-server/src/routes/: auth.rs  categories.rs  channels.rs  dms.rs  mod.rs  oauth.rs  servers.rs  ws.rs
crates/concord-server/tests/: categories.rs  dm_list.rs  dms.rs  message_channel_cascade.rs  messages.rs  register.rs  ws_auth.rs  ws_dm_message.rs  ws_presence.rs  ws_send_message.rs  ws_typing.rs
crates/concord-server/tests/helpers/: mod.rs
crates/concord-shared/: Cargo.toml
crates/concord-shared/src/: lib.rs  protocol.rs  types.rs  validation.rs
docs/: ARCHITECTURE.md
migrations/: 0000_extensions.sql  0001_initial_schema.sql  0002_review_feedback.sql  0003_refresh_tokens.sql  0004_server_invites.sql  0005_dm_messages.sql  0006_dm_read_state.sql
