[workspace]
resolver = "2"
members = [
    "crates/concord-shared",
    "crates/concord-server",
    "crates/concord-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dnreikronos"]
repository = "https://github.com/Dnreikronos/concord"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
secrecy = "0.10"
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dashmap = "6"

[workspace.lints.rust]
unused = "warn"
