[package]
name = "concord-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "concord-server"
path = "src/main.rs"

[dependencies]
concord-shared = { path = "../concord-shared" }
tokio.workspace = true
axum = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
