[package]
name = "concord-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "concord_server"
path = "src/lib.rs"

[[bin]]
name = "concord-server"
path = "src/main.rs"

[dependencies]
concord-shared = { path = "../concord-shared" }
tokio.workspace = true
axum = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { workspace = true }

[lints]
workspace = true
